# python-budgething-desktop

./: .gitignore  LICENSE  README.md  behave.ini
budgeting-app/: logging_config.yaml  pyproject.toml
budgeting-app/budgeting_app/gui/: app.py
budgeting-app/budgeting_app/gui/services/: base.py  service_manager.py
budgeting-app/budgeting_app/gui/services/add_profile/: add_profile.py
budgeting-app/budgeting_app/gui/services/csv_table_extractor/: csv_table_extractor.py
budgeting-app/budgeting_app/gui/services/drag_n_drop/: drag_n_drop.py
budgeting-app/budgeting_app/gui/services/json_table_extractor/: json_table_extractor.py
budgeting-app/budgeting_app/gui/services/table_extractor/: image_tools.py  image_viewer.py  table_extractor.py
budgeting-app/budgeting_app/gui/utils/: tools.py
budgeting-app/budgeting_app/integration_tests/: test_open_file.py
budgeting-app/budgeting_app/integration_tests/data/: sample.csv  sample.docx  sample.json
budgeting-app/budgeting_app/integration_tests/features/: README.md  environment.py  manual_table_extraction.feature  open_file.feature  utils.py
budgeting-app/budgeting_app/integration_tests/features/steps/: add_data_from_file_steps.py  common_steps.py  table_extractor_steps.py
budgeting-app/budgeting_app/pdf_table_reader/core/entities/: models.py
budgeting-app/budgeting_app/pdf_table_reader/core/usecases/: pdf_reader.py  table_detector_workspace.py
budgeting-app/budgeting_app/transaction_management/core/entities/: base.py  models.py  (+1 more)
budgeting-app/budgeting_app/utils/: logging.py  tools.py  types.py  validators.py
(+17 files in other folders)
